# sap-bdc-plugin

./: README.md
.claude-plugin/: plugin.json
mcp-server/: pyproject.toml
mcp-server/src/sap_bdc_mcp/: __init__.py  extended_tools.py  server.py
skills/bdc-connect-sharing/: SKILL.md
skills/bdc-governance-catalog/: SKILL.md
skills/bdc-troubleshooter/: SKILL.md
